overhaul of entire site

--- a/fucklabor.html
+++ b/fucklabor.html
@@ -2,14 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anxious to Never Have to Work Again</title>
+    <title>Fuck Labor | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="author" content="Liat Berdugo and Emily Martinez">
+    <meta name="author" content="Anxious to Make">
     <meta name='description' content='Commission Scripts. Lots of Scripts.'>
     <meta name='keywords' content='fuck labor, fluxus scripts'>
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Fuck Labor | Anxious to Make" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.anxioustomake.ga/fucklabor.html" />
+    <meta property="og:image" content="http://anxioustomake.ga/img/snake.jpg" />
+    <meta property="og:description" content='Fuck Labor. Write Scripts. Commission Animals.' /> 
+    <meta property="og:site_name" content="Anxious to Make" />
+    <meta property="fb:admins" content="753667636" />
+
+    <!--Twitter Meta-->
+    <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
+    <meta name="twitter:site" content="@anxioustomake" />
+    <meta name="twitter:title" content="Fuck Labor | Anxious to Make">
+    <meta name="twitter:description" content='Fuck Labor. Write Scripts. Commission Animals.'>
+    <meta name="twitter:creator" content="@anxioustomake ">
+    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/snake.jpg">
     
     <!-- Open Graph data -->
     <meta property="og:title" content="Anxious to Make" />
@@ -74,11 +91,8 @@
     <article class="modal-text">
       <p class="email"><img src="img/mail.gif"><span>
       <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a><br/>
+      </a>Emily <a href="https://twitter.com/Resonator11" target="_blank"> <i class="fa fa-twitter"></i></a> <a href="https://instagram.com/queerai" target="_blank"> <i class="fa fa-instagram"></i></a> + Liat <a href="https://twitter.com/whatliat" target="_blank"><i class="fa fa-twitter"></i></a> <a href="https://instagram.com/whatliat" target="_blank"><i class="fa fa-instagram"></i></a>
       </span> </p>
     </article>
   </div>        
@@ -95,8 +109,8 @@
     </header>
     <article class="modal-text">
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_ Institute for the Unstable Media (Rotterdam, NL), and The Luminary (St. Louis, MO).</p>
-      <br/><hr>
+      <p><strong>Anxious to Make</strong> is the collaborative practice of <strong>Liat Berdugo</strong> and <strong>Emily Martinez</strong>, two commissioning bodies.<br/><br/>Our focus is on economic concepts, such as cryptocurrencies and the so-called “sharing economy”, and the accelerationist, neoliberal landscapes associated with them.<br/><br/>Our work examines how these economic concepts intersect with colonialism, technology, wealth culture, race, altruism, utopianism, and exploitation.<br/><br/>While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, books, and sweepstakes.<br/><br/>Anxious to Make believes in absurdist extremes as way to examine contemporary realities.<br/><br/>Our work has appeared recently in Drugo More (Rijeka, Croatia), EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_Lab for the Unstable Media (Rotterdam, NL), The Luminary (St. Louis), The Institute of Network Cultures (Amsterdam, NL), The Wrong Biennale, and Telematic (San Francisco).</p>
+      <hr>
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
@@ -553,66 +567,75 @@
   <!--START: MAIN CONTENT-->
   <div class="container main-content">
     <div class="row">
-      <!--main content header-->
-      <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
+      <div class="col-xs-12 col-sm-8">
+        <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Fuck Labor. Write Scripts. Commission Animals.</em></h1>
+      </div>
+        <div class="hidden-xs col-sm-4">
         <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
       </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="pageheading">Fuck Labor. Write Scripts, Commission Animals</h1>
-      </div>
     </div>
+
     <div class="row">
-        <!--script or text goes here-->
-        <div class="col-xs-12 col-sm-4 col-md-4">
-            <p class="title">Write Scripts, lots of Scripts.</p>
-            <div class="clipvertical-wrapper">
-            <div class="clipvertical">    
-                <p class="script">SCRIPT<br/><br/>
-                INDEX CARD ONE
-                <br/><br/>
-                you are blocked. you are blocked because there are are so many books to read. so many people are Expert. who are you to make this art?
-                <br/><br/>
-                INDEX CARD TWO
-                <br/><br/>
-                take the books. put them in a bathtub. if you do not have the physical book, print an image of its cover from google image search, and put that in the bathtub, too. 
-                <br/><br/>
-                INDEX CARD THREE
-                <br/><br/>
-                get in. the tub should be full. 
-                sit there. 
-                you will know when to get out.
-                </p>
-            </div>   
-            </div>
-            <p class="credit">Commissioned from: <a href="https://www.fiverr.com/aricegirl/model-my-snake-with-your-message" target="_blank">I will model my pet snake with your message</a></p>
-        </div>
-
-        <!--sample goes here-->
-        <div class="col-xs-12 col-sm-8">
-            <h1 class="title">Here is ours</h1>
-            <img src="img/snake.jpg" class="img-responsive">      
-        </div>
-
-        <!--three additional examples go here-->
-        <div class="col-xs-12 col-sm-8">
+      <div class="col-xs-12 col-sm-8">
+        <div class="row">
+          <div class="col-xs-12">
+              <h1 class="title">Here is ours</h1>
+              <img src="img/snake.jpg" class="img-responsive">      
+          </div>
+          <div class="col-xs-12">
             <h1 class="title">Make Your Own</h1>
             <div class="row"> 
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/millamaija/take-an-unique-picture-with-my-dogs-with-your-text" target="_blank">I will take an unique picture with my dachshunds with your text</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/jenna561/take-a-picture-of-my-bearded-dragon-with-your-message" target="_blank">I will photograph my bearded dragon with your message or logo</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/cromif/send-you-3-hq-photos-of-my-monkey-holding-your-custom-message-or-logo" target="_blank">I will send you 3 HQ photos of my Monkey holding your custom message or logo</a>
-                </div>
+              <div class="col-xs-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/millamaija/take-an-unique-picture-with-my-dogs-with-your-text" target="_blank">I will take an unique picture with my dachshunds with your text</a>
+              </div>
+              <div class="col-xs-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/jenna561/take-a-picture-of-my-bearded-dragon-with-your-message" target="_blank">I will photograph my bearded dragon with your message or logo</a>
+              </div>
+              <div class="col-xs-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/cromif/send-you-3-hq-photos-of-my-monkey-holding-your-custom-message-or-logo" target="_blank">I will send you 3 HQ photos of my Monkey holding your custom message or logo</a>
+              </div>
             </div>
-        </div>  
-
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <p class="title">Write Scripts, lots of Scripts.</p>
+        <div class="clipvertical-wrapper">
+          <div class="clipvertical">    
+              <p class="script">SCRIPT<br/><br/>
+              INDEX CARD ONE
+              <br/><br/>
+              you are blocked. you are blocked because there are are so many books to read. so many people are Expert. who are you to make this art?
+              <br/><br/>
+              INDEX CARD TWO
+              <br/><br/>
+              take the books. put them in a bathtub. if you do not have the physical book, print an image of its cover from google image search, and put that in the bathtub, too. 
+              <br/><br/>
+              INDEX CARD THREE
+              <br/><br/>
+              get in. the tub should be full. 
+              sit there. 
+              you will know when to get out.
+              </p>
+          </div>   
+        </div>
+        <p class="credit">Commissioned from: <a href="https://www.fiverr.com/aricegirl/model-my-snake-with-your-message" target="_blank">I will model my pet snake with your message</a></p>
+      </div>       
     </div><!--end row-->
+
+    <div class="fat-bottom"></div>
+<!--START: FOOTER -->
+<footer>
+  <div>
+    <div class="col-xs-12">
+      <p class="center"><span class="copyright">&copy; 2015<script>new Date().getFullYear()>2015&&document.write("-"+new Date().getFullYear());</script> Anxious to Make</span> <img class="tiny" src="img/anxious-icon.gif"/> <!-- <a href="https://twitter.com/anxioustomake" target="_blank"> <i class="fa fa-twitter"></i></a> --></p>
+    </div>
+  </div>
+</footer>
+<!--SEND: FOOTER --> 
   </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
