--- a/afterwork.html
+++ b/afterwork.html
@@ -2,22 +2,22 @@
 <html lang="en" class="no-js">
 <head>
     <meta charset="UTF-8">
-    <title>After Work | Four Futures</title>
+    <title>After Work | Anxious to Make</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="no-cache">
     <meta http-equiv="Pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content="After Work | Four Futures">
+    <meta name='description' content="After Work">
     <meta name='keywords' content='capitalism, neoliberalism, accelerationism, work, labor, digital labor, immaterial labor, post-work'>
     
     <!-- Open Graph data -->
     <meta property="og:title" content="WWWORK" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://www.anxioustomake.ga/wwwork.html" />
-    <meta property="og:image" content="http://anxioustomake.ga/img/meta-wwwork.jpg" />
-    <meta property="og:description" content="After Work | Four Futures" /> 
+    <meta property="og:url" content="http://www.anxioustomake.ga/afterwork.html" />
+    <meta property="og:image" content="http://anxioustomake.ga/img/meta-afterwork.jpg" />
+    <meta property="og:description" content="After Work" /> 
     <meta property="og:site_name" content="Anxious to Make" />
     <meta property="fb:admins" content="753667636" />
 
@@ -25,8 +25,8 @@
     <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
     <meta name="twitter:site" content="@anxioustomake" />
     <meta name="twitter:title" content="WWWORK">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-wwwork.jpg">
+    <meta name="twitter:description" content="After Work">
+    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-afterwork.jpg">
 
   
     <!-- CSS -->
@@ -61,11 +61,10 @@
 
     <script type="text/javascript" src="js/analytics.js"></script>
     
-    <link rel="stylesheet" type="text/css" href="css/sweepstakes.css">
 
  </head>
 
-<body>
+<body class="commission">
   <!--START: CONTACT MODAL-->
 <aside id="contact-modal" class="popup">
   <div class="popUpContainer">
@@ -76,11 +75,8 @@
     <article class="modal-text">
       <p class="email"><img src="img/mail.gif"><span>
       <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a><br/>
+      </a>Emily <a href="https://twitter.com/Resonator11" target="_blank"> <i class="fa fa-twitter"></i></a> <a href="https://instagram.com/queerai" target="_blank"> <i class="fa fa-instagram"></i></a> + Liat <a href="https://twitter.com/whatliat" target="_blank"><i class="fa fa-twitter"></i></a> <a href="https://instagram.com/whatliat" target="_blank"><i class="fa fa-instagram"></i></a>
       </span> </p>
     </article>
   </div>        
@@ -97,8 +93,8 @@
     </header>
     <article class="modal-text">
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_ Institute for the Unstable Media (Rotterdam, NL), and The Luminary (St. Louis, MO).</p>
-      <br/><hr>
+      <p><strong>Anxious to Make</strong> is the collaborative practice of <strong>Liat Berdugo</strong> and <strong>Emily Martinez</strong>, two commissioning bodies.<br/><br/>Our focus is on economic concepts, such as cryptocurrencies and the so-called “sharing economy”, and the accelerationist, neoliberal landscapes associated with them.<br/><br/>Our work examines how these economic concepts intersect with colonialism, technology, wealth culture, race, altruism, utopianism, and exploitation.<br/><br/>While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, books, and sweepstakes.<br/><br/>Anxious to Make believes in absurdist extremes as way to examine contemporary realities.<br/><br/>Our work has appeared recently in Drugo More (Rijeka, Croatia), EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_Lab for the Unstable Media (Rotterdam, NL), The Luminary (St. Louis), The Institute of Network Cultures (Amsterdam, NL), The Wrong Biennale, and Telematic (San Francisco).</p>
+      <hr>
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
@@ -551,17 +547,37 @@
 </div>
 <!-- END: SOCIAL SHARE -->
 
-  
-<!--START: MAIN CONTENT-->
-<div class="container dolphin-container">    
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/222723623?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<!--START: MAIN CONTENT-->   
+<div class="container main-content">  
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>After Work</em></h1>
+    </div>
+    <div class="col-xs-12">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/222723623?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <br/>
+      <h1 class="title">Description</h1>
+      <p>Two specters are haunting earth in the 21st-century: ecological catastrophe and technological automation. Taken to their logical extremes, these twin anxieties will drive the end of capitalism. What are the implications of artificial intelligence, automation, and the future of work?</p>
+      <p>This video draws adapted text from social critic Peter Frase's 2016 book, Four Futures, and archival footage from the Prelinger Archives, to form a speculative exercise in social science fiction.</p>
+      <p>The video is often screened during an ideation workshop that helps tech and civic workers reimagine “sharing" platforms and design cooperative solutions for the post-carbon, post-capitalist future. After watching the video, participants <a href="futuregenerator.html">design the future</a>.</p>
+    </div>
+  </div><!--end row-->
+<div class="fat-bottom"></div>
+<!--START: FOOTER -->
+<footer>
+  <div>
+    <div class="col-xs-12">
+      <p class="center"><span class="copyright">&copy; 2015<script>new Date().getFullYear()>2015&&document.write("-"+new Date().getFullYear());</script> Anxious to Make</span> <img class="tiny" src="img/anxious-icon.gif"/> <!-- <a href="https://twitter.com/anxioustomake" target="_blank"> <i class="fa fa-twitter"></i></a> --></p>
+    </div>
   </div>
-  <p>After watching, design <a href="futuregenerator.html">the future</a>.</p>
-</div>
+</footer>
+<!--SEND: FOOTER -->
+</div> <!--end container--> 
 <!--END: MAIN CONTENT-->
 
-    <!-- Javascript -->
+<!-- Javascript -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
