--- a/dolphinaccelerator.html
+++ b/dolphinaccelerator.html
@@ -62,11 +62,10 @@
 
     <script type="text/javascript" src="js/analytics.js"></script>
     
-    <link rel="stylesheet" type="text/css" href="css/sweepstakes.css">
 
  </head>
 
-<body>
+<body class="commission">
   <!--START: CONTACT MODAL-->
 <aside id="contact-modal" class="popup">
   <div class="popUpContainer">
@@ -77,11 +76,8 @@
     <article class="modal-text">
       <p class="email"><img src="img/mail.gif"><span>
       <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a><br/>
+      </a>Emily <a href="https://twitter.com/Resonator11" target="_blank"> <i class="fa fa-twitter"></i></a> <a href="https://instagram.com/queerai" target="_blank"> <i class="fa fa-instagram"></i></a> + Liat <a href="https://twitter.com/whatliat" target="_blank"><i class="fa fa-twitter"></i></a> <a href="https://instagram.com/whatliat" target="_blank"><i class="fa fa-instagram"></i></a>
       </span> </p>
     </article>
   </div>        
@@ -98,8 +94,8 @@
     </header>
     <article class="modal-text">
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_ Institute for the Unstable Media (Rotterdam, NL), and The Luminary (St. Louis, MO).</p>
-      <br/><hr>
+      <p><strong>Anxious to Make</strong> is the collaborative practice of <strong>Liat Berdugo</strong> and <strong>Emily Martinez</strong>, two commissioning bodies.<br/><br/>Our focus is on economic concepts, such as cryptocurrencies and the so-called “sharing economy”, and the accelerationist, neoliberal landscapes associated with them.<br/><br/>Our work examines how these economic concepts intersect with colonialism, technology, wealth culture, race, altruism, utopianism, and exploitation.<br/><br/>While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, books, and sweepstakes.<br/><br/>Anxious to Make believes in absurdist extremes as way to examine contemporary realities.<br/><br/>Our work has appeared recently in Drugo More (Rijeka, Croatia), EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_Lab for the Unstable Media (Rotterdam, NL), The Luminary (St. Louis), The Institute of Network Cultures (Amsterdam, NL), The Wrong Biennale, and Telematic (San Francisco).</p>
+      <hr>
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
@@ -552,17 +548,35 @@
 </div>
 <!-- END: SOCIAL SHARE -->
 
-  
-<!--START: MAIN CONTENT-->
-<div class="container dolphin-container">    
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/186337332?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-  <p><em>Dolphin Accelerator</em> was commissioned by Temporary Art Review for <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field Convening 2016 | Miami</a> from October 23-25, 2016. The project was embedded in an essay by theorist and curator Joshua Simon published on <a href="http://temporaryartreview.com/the-dual-power-of-arts-organizations/" target="_blank">temporaryartreview.com</a> and on <a href="http://commonfield.org/projects" target="_blank">Common Field | Research</a> and was part of a broader segment on the impacts of accelerated capitalism.</p>
-</div>
-<!--END: MAIN CONTENT-->
 
-    <!-- Javascript -->
+<!--START: MAIN CONTENT-->   
+<div class="container main-content">  
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Dolphin Accelerator</em></h1>
+    </div>
+    <div class="col-xs-12">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/186337332?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <h1 class="title">Description</h1>
+      <p><em>Dolphin Accelerator</em> was commissioned by Temporary Art Review for <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field Convening 2016 | Miami</a> from October 23-25, 2016. The project was embedded in an essay by theorist and curator Joshua Simon published on <a href="http://temporaryartreview.com/the-dual-power-of-arts-organizations/" target="_blank">temporaryartreview.com</a> and on <a href="http://commonfield.org/projects" target="_blank">Common Field | Research</a> and was part of a broader segment on the impacts of accelerated capitalism.</p>
+    </div>
+  </div><!--end row-->
+  <div class="fat-bottom"></div>
+<!--START: FOOTER -->
+<footer>
+  <div>
+    <div class="col-xs-12">
+      <p class="center"><span class="copyright">&copy; 2015<script>new Date().getFullYear()>2015&&document.write("-"+new Date().getFullYear());</script> Anxious to Make</span> <img class="tiny" src="img/anxious-icon.gif"/> <!-- <a href="https://twitter.com/anxioustomake" target="_blank"> <i class="fa fa-twitter"></i></a> --></p>
+    </div>
+  </div>
+</footer>
+<!--SEND: FOOTER -->
+</div> <!--end container--> 
+<!--END: MAIN CONTENT-->
+  
+<!-- Javascript -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
