--- a/externalizedistrust.html
+++ b/externalizedistrust.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Anxious to Externalize Distrust</title>
+  <title>Externalize Distrust | Anxious to Make</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Cache-control" content="public">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,11 +74,8 @@
     <article class="modal-text">
       <p class="email"><img src="img/mail.gif"><span>
       <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a><br/>
+      </a>Emily <a href="https://twitter.com/Resonator11" target="_blank"> <i class="fa fa-twitter"></i></a> <a href="https://instagram.com/queerai" target="_blank"> <i class="fa fa-instagram"></i></a> + Liat <a href="https://twitter.com/whatliat" target="_blank"><i class="fa fa-twitter"></i></a> <a href="https://instagram.com/whatliat" target="_blank"><i class="fa fa-instagram"></i></a>
       </span> </p>
     </article>
   </div>        
@@ -95,8 +92,8 @@
     </header>
     <article class="modal-text">
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_ Institute for the Unstable Media (Rotterdam, NL), and The Luminary (St. Louis, MO).</p>
-      <br/><hr>
+      <p><strong>Anxious to Make</strong> is the collaborative practice of <strong>Liat Berdugo</strong> and <strong>Emily Martinez</strong>, two commissioning bodies.<br/><br/>Our focus is on economic concepts, such as cryptocurrencies and the so-called “sharing economy”, and the accelerationist, neoliberal landscapes associated with them.<br/><br/>Our work examines how these economic concepts intersect with colonialism, technology, wealth culture, race, altruism, utopianism, and exploitation.<br/><br/>While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, books, and sweepstakes.<br/><br/>Anxious to Make believes in absurdist extremes as way to examine contemporary realities.<br/><br/>Our work has appeared recently in Drugo More (Rijeka, Croatia), EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_Lab for the Unstable Media (Rotterdam, NL), The Luminary (St. Louis), The Institute of Network Cultures (Amsterdam, NL), The Wrong Biennale, and Telematic (San Francisco).</p>
+      <hr>
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
@@ -553,70 +550,80 @@
 <!--START: MAIN CONTENT-->
 <div class="container main-content">
   <div class="row">
-    <!--main content header-->
-    <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
-      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
+    <div class="col-xs-12 col-sm-8">
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Commission a Performance to Externalize Distrust</em></h1>
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-      <h1 class="pageheading">Commission a Performance to Externalize Distrust</h1>
+      <div class="hidden-xs col-sm-4">
+      <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
     </div>
   </div>
 
   <div class="row">  
-    <!--script or text goes here-->
-    <div class="col-xs-12 col-sm-4 col-md-4">
-        <p class="title">Script</p>
-        <div class="clipvertical-wrapper">
-        <div class="clipvertical">    
-            <p class="script">Varun: Hello. I am your distrust in capitalism!
-                <br/><br/>
-                Khalun: And hello, I am your distrust in your own intuition. 
-                <br/><br/>
-                SAY TOGETHER: We live here, in this living room, together. We live outside of you.
-                <br/><br/>
-                Varun: We live in India. We cannot hug or get close to each other, don’t ask why!!!
-                <br/><br/>
-                Khalun: Yeah. We cannot hug or get close to each other, don’t ask why.
-                <br/><br/>
-                Varun: But the point is, we are externalized now.
-                <br/><br/>
-                Khalun: We are outside of you. 
-                <br/><br/>
-                SAY TOGETHER: Bye!
-                <br/><br/>
-                [Both wave goodbye to the camera]
-            </p>
-        </div>   
+    <div class="col-xs-12 col-sm-8">
+      <div class="row"> 
+        <div class="col-xs-12">
+          <h1 class="title">Watch ours!</h1>
+          <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587609?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>       
         </div>
-        <p class="credit">Commissioned from: <a href="https://www.fiverr.com/varun_karkhanis/make-varun-and-khalun-say-whatever-you-want" target="_blank">I will make twins say whatever you want</a></p>
-    </div>
-    <!--sample goes here-->
-    <div class="col-xs-12 col-sm-8 col-md-8">
-        <h1 class="title">Watch ours!</h1>
-        <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587609?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>       
-    </div>
-    <!--three additional examples go here-->
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="title">Make Your Own</h1>
-        <div class="row">  
-            <div class="col-xs-4">
+        <div class="col-xs-12">
+          <h1 class="title">Make Your Own</h1>
+          <div class="row">  
+            <div class="col-xs-12 col-sm-4">
                 <span class="recommendation">We recommend:<br/></span> 
                 <a href="https://www.fiverr.com/varun_karkhanis/do-a-eye-brow-equalizer-holding-custom-sign" target="_blank">I will create an eyebrow equalizer holding custom sign</a>
             </div>   
-            <div class="col-xs-4">
+            <div class="col-xs-12 col-sm-4">
                 <span class="recommendation">We recommend:<br/></span> 
                 <a href="https://www.fiverr.com/varun_karkhanis/say-whatever-you-want-with-my-fancy-man-costume" target="_blank">I will say whatever you want with my fancy man costume</a>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-12 col-sm-4">
                 <span class="recommendation">We recommend:<br/></span> 
                 <a href="https://www.fiverr.com/varun_karkhanis/say-whatever-you-want-like-a-ghost-rider" target="_blank">I will say whatever you want like a Ghost Rider</a>
             </div>
+          </div>
         </div>
-    </div>  
+      </div>
+    </div>      
+    <div class="col-xs-12 col-sm-4">
+      <p class="title">Script</p>
+      <div class="clipvertical-wrapper">
+        <div class="clipvertical">    
+          <p class="script">Varun: Hello. I am your distrust in capitalism!
+              <br/><br/>
+              Khalun: And hello, I am your distrust in your own intuition. 
+              <br/><br/>
+              SAY TOGETHER: We live here, in this living room, together. We live outside of you.
+              <br/><br/>
+              Varun: We live in India. We cannot hug or get close to each other, don’t ask why!!!
+              <br/><br/>
+              Khalun: Yeah. We cannot hug or get close to each other, don’t ask why.
+              <br/><br/>
+              Varun: But the point is, we are externalized now.
+              <br/><br/>
+              Khalun: We are outside of you. 
+              <br/><br/>
+              SAY TOGETHER: Bye!
+              <br/><br/>
+              [Both wave goodbye to the camera]
+          </p>
+        </div>   
+      </div>
+      <p class="credit">Commissioned from: <a href="https://www.fiverr.com/varun_karkhanis/make-varun-and-khalun-say-whatever-you-want" target="_blank">I will make twins say whatever you want</a></p>
+    </div>
   
   </div><!--end row-->
+  <div class="fat-bottom"></div>
+<!--START: FOOTER -->
+<footer>
+  <div>
+    <div class="col-xs-12">
+      <p class="center"><span class="copyright">&copy; 2015<script>new Date().getFullYear()>2015&&document.write("-"+new Date().getFullYear());</script> Anxious to Make</span> <img class="tiny" src="img/anxious-icon.gif"/> <!-- <a href="https://twitter.com/anxioustomake" target="_blank"> <i class="fa fa-twitter"></i></a> --></p>
+    </div>
+  </div>
+</footer>
+<!--SEND: FOOTER -->  
 </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
