--- a/futureofwork.html
+++ b/futureofwork.html
@@ -2,31 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The Future of Work Testimonials</title>
+  <title>The Future of Work Testimonials | Anxious to Make</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Cache-control" content="public">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="author" content="Liat Berdugo and Emily Martinez">
-  <meta name='description' content='The Future of Work Testimonials'>
+  <meta name='description' content='The Future of Work Testimonials: Testimonial actors answer questions about jobs, the sharing economy, and the future of work.'>
   <meta name='keywords' content='automation, future of work, sharing economy, mass unemployment, basic income, testimonials'>
   
-    <!-- Open Graph data -->
-    <meta property="og:title" content="Anxious to Make" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://www.anxioustomake.ga/" />
-    <meta property="og:image" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg" />
-    <meta property="og:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.' /> 
-    <meta property="og:site_name" content="Anxious to Make" />
-    <meta property="fb:admins" content="753667636" />
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Anxious to Make" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="http://www.anxioustomake.ga/" />
+  <meta property="og:image" content="http://anxioustomake.ga/img/meta-futureofwork.jpg" />
+  <meta property="og:description" content='The Future of Work Testimonials: Testimonial actors answer questions about jobs, the sharing economy, and the future of work.' /> 
+  <meta property="og:site_name" content="Anxious to Make" />
+  <meta property="fb:admins" content="753667636" />
 
-    <!--Twitter Meta-->
-    <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
-    <meta name="twitter:site" content="@anxioustomake" />
-    <meta name="twitter:title" content="Anxious to Make">
-    <meta name="twitter:description" content='Anxious to Make is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape.'>
-    <meta name="twitter:creator" content="@anxioustomake ">
-    <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-humanbillboard.jpg">
+  <!--Twitter Meta-->
+  <meta name="twitter:card" content="summary" /> <!--do not edit this line -->
+  <meta name="twitter:site" content="@anxioustomake" />
+  <meta name="twitter:title" content="Anxious to Make">
+  <meta name="twitter:description" content='The Future of Work Testimonials: Testimonial actors answer questions about jobs, the sharing economy, and the future of work.'>
+  <meta name="twitter:creator" content="@anxioustomake ">
+  <meta name="twitter:image:src" content="http://anxioustomake.ga/img/meta-futureofwork.jpg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -74,11 +74,8 @@
     <article class="modal-text">
       <p class="email"><img src="img/mail.gif"><span>
       <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a><br/>
+      </a>Emily <a href="https://twitter.com/Resonator11" target="_blank"> <i class="fa fa-twitter"></i></a> <a href="https://instagram.com/queerai" target="_blank"> <i class="fa fa-instagram"></i></a> + Liat <a href="https://twitter.com/whatliat" target="_blank"><i class="fa fa-twitter"></i></a> <a href="https://instagram.com/whatliat" target="_blank"><i class="fa fa-instagram"></i></a>
       </span> </p>
     </article>
   </div>        
@@ -95,8 +92,8 @@
     </header>
     <article class="modal-text">
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_ Institute for the Unstable Media (Rotterdam, NL), and The Luminary (St. Louis, MO).</p>
-      <br/><hr>
+      <p><strong>Anxious to Make</strong> is the collaborative practice of <strong>Liat Berdugo</strong> and <strong>Emily Martinez</strong>, two commissioning bodies.<br/><br/>Our focus is on economic concepts, such as cryptocurrencies and the so-called “sharing economy”, and the accelerationist, neoliberal landscapes associated with them.<br/><br/>Our work examines how these economic concepts intersect with colonialism, technology, wealth culture, race, altruism, utopianism, and exploitation.<br/><br/>While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, books, and sweepstakes.<br/><br/>Anxious to Make believes in absurdist extremes as way to examine contemporary realities.<br/><br/>Our work has appeared recently in Drugo More (Rijeka, Croatia), EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_Lab for the Unstable Media (Rotterdam, NL), The Luminary (St. Louis), The Institute of Network Cultures (Amsterdam, NL), The Wrong Biennale, and Telematic (San Francisco).</p>
+      <hr>
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
@@ -555,7 +552,7 @@
   <div class="row">
     <!--main content header-->
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-      <h1 class="pageheading shake-slow shake-constant">The Future of Work, Testimonials</h1>
+      <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>The Future of Work Testimonials</em></h1>
     </div>
     <!-- <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
       <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
@@ -571,6 +568,8 @@
         <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/163223022?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
+        <br/>
+        <h1 class="title">Description</h1>
         <p><em>The Future of Work Testimonials</em> were commissioned from "testimonial actors" on Fiverr.com. 
         <br/></br/>
         Testimonial actors are actors whose role it is to perform "authentic" testimonials about a product or service. In the majority of cases, these are products or services they have never used. Testimonial actors are accustomed to working with scripts. Rarely do they contribute their own thoughts or opinions about the things they are reviewing.
@@ -598,10 +597,18 @@
         </div>
         <p class="credit">Commissioned from: <a href="https://www.fiverr.com/yourspokesguy" target="_blank">I will create a natural URBAN testimonial on webcam in 48 Hours</a>, <a href="https://www.fiverr.com/tgraham828" target="_blank">I will create a natural business review</a>, <a href="https://www.fiverr.com/ssgtstinnett">   
         I will create a testimonial video as an American Male Military War Veteran</a>, <a href="https://www.fiverr.com/mayvin" target="_blank">I will produce a high quality video with my family</a>, <a href="https://www.fiverr.com/marcossama">I will video testimonial English latin accent or spanish</a>, <a href="https://www.fiverr.com/socialimpact" target="_blank">I will be your video spokeperson for your business in my car</a>, <a href="https://www.fiverr.com/bradfordjet" target="_blank">I will professionally do a video testimonial</a>, <a href="https://www.fiverr.com/lawrenceiscool" target="_blank">I will record a sloppy and UNPROFESSIONAL Testimonial</a>, <a href="https://www.fiverr.com/ashwanithakur" target="_blank">I will do Realistic and Unprofessional Testimonial</a>, <a href="https://www.fiverr.com/jhorn1177" target="_blank">I will be a believable and trustworthy Spokesperson for your cause</a>, <a href="https://www.fiverr.com/ivanalexx" target="_blank">I will record the PERFECT Video Testimonial</a></p>
-    </div>
-
-  
+    </div>  
   </div><!--end row-->
+  <div class="fat-bottom"></div>
+<!--START: FOOTER -->
+<footer>
+  <div>
+    <div class="col-xs-12">
+      <p class="center"><span class="copyright">&copy; 2015<script>new Date().getFullYear()>2015&&document.write("-"+new Date().getFullYear());</script> Anxious to Make</span> <img class="tiny" src="img/anxious-icon.gif"/> <!-- <a href="https://twitter.com/anxioustomake" target="_blank"> <i class="fa fa-twitter"></i></a> --></p>
+    </div>
+  </div>
+</footer>
+<!--SEND: FOOTER -->
 </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
