--- a/generators.html
+++ b/generators.html
@@ -74,11 +74,8 @@
     <article class="modal-text">
       <p class="email"><img src="img/mail.gif"><span>
       <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a><br/>
+      </a>Emily <a href="https://twitter.com/Resonator11" target="_blank"> <i class="fa fa-twitter"></i></a> <a href="https://instagram.com/queerai" target="_blank"> <i class="fa fa-instagram"></i></a> + Liat <a href="https://twitter.com/whatliat" target="_blank"><i class="fa fa-twitter"></i></a> <a href="https://instagram.com/whatliat" target="_blank"><i class="fa fa-instagram"></i></a>
       </span> </p>
     </article>
   </div>        
@@ -95,8 +92,8 @@
     </header>
     <article class="modal-text">
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_ Institute for the Unstable Media (Rotterdam, NL), and The Luminary (St. Louis, MO).</p>
-      <br/><hr>
+      <p><strong>Anxious to Make</strong> is the collaborative practice of <strong>Liat Berdugo</strong> and <strong>Emily Martinez</strong>, two commissioning bodies.<br/><br/>Our focus is on economic concepts, such as cryptocurrencies and the so-called “sharing economy”, and the accelerationist, neoliberal landscapes associated with them.<br/><br/>Our work examines how these economic concepts intersect with colonialism, technology, wealth culture, race, altruism, utopianism, and exploitation.<br/><br/>While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, books, and sweepstakes.<br/><br/>Anxious to Make believes in absurdist extremes as way to examine contemporary realities.<br/><br/>Our work has appeared recently in Drugo More (Rijeka, Croatia), EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_Lab for the Unstable Media (Rotterdam, NL), The Luminary (St. Louis), The Institute of Network Cultures (Amsterdam, NL), The Wrong Biennale, and Telematic (San Francisco).</p>
+      <hr>
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
@@ -551,56 +548,59 @@
 
 
     <!--START: MAIN CONTENT-->
-    <div class="container">
-        <div class="row">
-          <h1 class="title">Our Generators</h1>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="projectgenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Project Generator"><span>Project<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="brandgenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Brand Generator"><span>Brand<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="newidgenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="New ID Generator"><span>New ID<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="publicitygenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Publicity Generator"><span>Publicity<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="toughlovegenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Tough Love Generator"><span>Tough Love<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="confidencegenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Confidence Generator"><span>Confidence<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="mugruggenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Mug/Rug Generator"><span>Mug/Rug<br/>Generator</span></a>
-          </div> 
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="importantthings.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>More Important Art<br/>Generator</span></a>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="futuregenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Future Generator"><span>Future<br/>Generator</span></a>
-          </div> 
-          <!-- <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="moneymakinggenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Money Making Generator"><span>Money Making<br/>Generator</span></a>
-          </div> 
-          <div class="col-xs-6 col-sm-4 col-md-3 database">
-            <a href="interngenerator.html">
-            <img src="img/database.jpg" class="img-responsive" alt="Intern Generator"><span>Intern<br/>Generator</span></a>
-          </div> -->
+    <div class="container main-content">
+      <div class="row">
+        <h1 class="title shake-slow shake-constant shake-constant--hover"><span class="negative">Our Generators</span></h1>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="projectgenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Project Generator"><span>Project<br/>Generator</span></a>
         </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="brandgenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Brand Generator"><span>Brand<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="newidgenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="New ID Generator"><span>New ID<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="publicitygenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Publicity Generator"><span>Publicity<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="toughlovegenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Tough Love Generator"><span>Tough Love<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="confidencegenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Confidence Generator"><span>Confidence<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="mugruggenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Mug/Rug Generator"><span>Mug/Rug<br/>Generator</span></a>
+        </div> 
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="importantthings.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>More Important Art<br/>Generator</span></a>
+        </div>
+        <div class="col-xs-6 col-sm-4 col-md-3 database">
+          <a href="futuregenerator.html">
+          <img src="img/database.jpg" class="img-responsive" alt="Future Generator"><span>Future<br/>Generator</span></a>
+        </div> 
+      </div>
+<div class="fat-bottom"></div>
+<!--START: FOOTER -->
+<footer>
+  <div>
+    <div class="col-xs-12">
+      <p class="center"><span class="copyright">&copy; 2015<script>new Date().getFullYear()>2015&&document.write("-"+new Date().getFullYear());</script> Anxious to Make</span> <img class="tiny" src="img/anxious-icon.gif"/> <!-- <a href="https://twitter.com/anxioustomake" target="_blank"> <i class="fa fa-twitter"></i></a> --></p>
+    </div>
+  </div>
+</footer>
+<!--SEND: FOOTER -->
     </div>
     <!--END: MAIN CONTENT-->
+
 
 <!-- Javascript -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
