--- a/unfamiliarmaterials.html
+++ b/unfamiliarmaterials.html
@@ -74,11 +74,8 @@
     <article class="modal-text">
       <p class="email"><img src="img/mail.gif"><span>
       <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
-      <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
-      <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+      <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a><br/>
+      </a>Emily <a href="https://twitter.com/Resonator11" target="_blank"> <i class="fa fa-twitter"></i></a> <a href="https://instagram.com/queerai" target="_blank"> <i class="fa fa-instagram"></i></a> + Liat <a href="https://twitter.com/whatliat" target="_blank"><i class="fa fa-twitter"></i></a> <a href="https://instagram.com/whatliat" target="_blank"><i class="fa fa-instagram"></i></a>
       </span> </p>
     </article>
   </div>        
@@ -95,8 +92,8 @@
     </header>
     <article class="modal-text">
       <img src="img/meta-bio.jpg" class=" bio img-circle" alt="Liat and Emily">
-      <p><strong>Anxious to Make</strong> is the collaborative practice of Liat Berdugo and Emily Martinez, two commissioning bodies. Our focus is on the so-called "sharing economy" and the contemporary artists "anxiety to make" in the accelerationist, neoliberal economic landscape. While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, and sweepstakes. Anxious to Make believes in absurdist extremes as way to examine contemporary realities. Our work has appeared recently in EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_ Institute for the Unstable Media (Rotterdam, NL), and The Luminary (St. Louis, MO).</p>
-      <br/><hr>
+      <p><strong>Anxious to Make</strong> is the collaborative practice of <strong>Liat Berdugo</strong> and <strong>Emily Martinez</strong>, two commissioning bodies.<br/><br/>Our focus is on economic concepts, such as cryptocurrencies and the so-called “sharing economy”, and the accelerationist, neoliberal landscapes associated with them.<br/><br/>Our work examines how these economic concepts intersect with colonialism, technology, wealth culture, race, altruism, utopianism, and exploitation.<br/><br/>While Anxious to Make’s physical existence takes many shifting forms, it often manifests as series of video commissions, downloads, online generators, workshops, net art interventions, books, and sweepstakes.<br/><br/>Anxious to Make believes in absurdist extremes as way to examine contemporary realities.<br/><br/>Our work has appeared recently in Drugo More (Rijeka, Croatia), EMMEDIA (Calgary, CA), Transmediale (Berlin, DE), Yerba Buena Center for the Arts (San Francisco), MoMA PS1 (New York), V2_Lab for the Unstable Media (Rotterdam, NL), The Luminary (St. Louis), The Institute of Network Cultures (Amsterdam, NL), The Wrong Biennale, and Telematic (San Francisco).</p>
+      <hr>
       <p><strong>Liat Berdugo</strong> is an artist, writer, and curator based in Oakland, CA. Her work strives to create an expanded, thoughtful consideration for digital culture. Berdugo has been exhibited in galleries and festivals internationally, and collaborates widely with individuals and archives. She is an Assistant Professor of Art and Architecture at the University of San Francisco. More at <a href="http://liatberdugo.com/" target="_blank">http://liatberdugo.com</a>.</p>
       <p><strong>Emily Martinez</strong> is an artist working with digital and networked media. Her recent practice and research interests examine the relationship between media, memory, and catastrophe; post-representational forms of subjectivity, emancipatory practices, and the digital archive. Currently lives and works in Los Angeles, California. More at <a href="http://somethingnothing.me" target="_blank">http://somethingnothing.me</a>.</p>
     </article>
@@ -553,61 +550,70 @@
   <!--START: MAIN CONTENT-->
   <div class="container main-content">
     <div class="row">
-      <!--main content header-->
-      <div class="col-xs-8 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0">
+        <div class="col-xs-12 col-sm-8">
+          <h1 class="pageheading shake-slow shake-constant shake-constant--hover"><em>Commission a Performative Validation</em></h1>
+        </div>
+        <div class="hidden-xs col-sm-4">
         <img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png">
       </div>
-      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-        <h1 class="pageheading">Commission a Performative Validation</h1>
-      </div>
     </div>
-    <div class="row">
-        <!--script or text goes here-->
-        <div class="col-xs-12 col-sm-4 col-md-4">
-            <p class="title">Are you working with unfamiliar materials?</p>
-            <div class="clipvertical-wrapper">
-            <div class="clipvertical">    
-                <p class="script">SCRIPT<br/><br/>Hey. I’ve got to talk to you. Man-to-man. Man-to-person. Because I heard you’re working with unfamiliar materials.
-                <br/><br/>
-                Look, I’m not the best ironer in the world. This thing in my hand--(hold up iron)--it’s a hot, steaming piece of metal. It’s dangerous. It’s intimidating. It has a sharp point! 
-                <br/><br/>
-                This iron, though -- I understand it now. This iron and me get along. It’s like the iron and I are one body. Some people say that ironing is a fantastic upper-body workout, but they’re missing the point. Me and this iron – we *are* *one* body. 
-                <br/><br/>
-                Anyway, look. I was once a young boy with crinkled shirts. Irons were unfamiliar materials to me. But now they’re not. I’m telling you this because it can be your story, too. You can do this. Whatever your unfamiliar material is -- it can become a part of you.</p>
-            </div> 
-            </div>  
-            <p class="credit">Commissioned from: <a href="https://www.fiverr.com/saavfabb/say-anything-you-want-in-a-video-while-ironing" target="_blank">I will say Anything You Want While Ironing In A HD Video, In Italian, English, Spanish</a></p>
-        </div>
 
-        <!--sample goes here-->
-        <div class="col-xs-12 col-sm-8">
+    <div class="row">
+      <div class="col-xs-12 col-sm-8">
+        <div class="row">
+          <div class="col-xs-12">
             <h1 class="title">Watch ours!</h1>
             <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/153587577?loop=1&color=ff0179&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>       
-        </div>
-
-        <!--three additional examples go here-->
-        <div class="col-xs-12 col-sm-8">
+          </div>
+          <div class="col-xs-12">
             <h1 class="title">Make Your Own</h1>
             <div class="row">  
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/milkveins/make-a-performance-art-video-for-you" target="_blank">I will make a performance art video for you</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/kimberlye/create-a-tutorial-cooking-video-of-how-to-cook-your-recipe" target="_blank">I will create an HD cooking tutorial video of your recipe</a>
-                </div>
-                <div class="col-xs-4">
-                    <span class="recommendation">We recommend:<br/></span> 
-                    <a href="https://www.fiverr.com/mr_marcus/be-drunk-at-the-bar-and-relay-your-message" target="_blank">I will be drunk at the bar and relay your message</a>
-                </div>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/milkveins/make-a-performance-art-video-for-you" target="_blank">I will make a performance art video for you</a>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/kimberlye/create-a-tutorial-cooking-video-of-how-to-cook-your-recipe" target="_blank">I will create an HD cooking tutorial video of your recipe</a>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                  <span class="recommendation">We recommend:<br/></span> 
+                  <a href="https://www.fiverr.com/mr_marcus/be-drunk-at-the-bar-and-relay-your-message" target="_blank">I will be drunk at the bar and relay your message</a>
+              </div>
             </div>
-        </div>  
+          </div>
+        </div>
+      </div>      
 
-      </div><!--end container-->
+      <div class="col-xs-12 col-sm-4">
+          <p class="title">Write Scripts</p>
+          <div class="clipvertical-wrapper">
+          <div class="clipvertical">    
+              <p class="script">Hey. I’ve got to talk to you. Man-to-man. Man-to-person. Because I heard you’re working with unfamiliar materials.
+              <br/><br/>
+              Look, I’m not the best ironer in the world. This thing in my hand--(hold up iron)--it’s a hot, steaming piece of metal. It’s dangerous. It’s intimidating. It has a sharp point! 
+              <br/><br/>
+              This iron, though -- I understand it now. This iron and me get along. It’s like the iron and I are one body. Some people say that ironing is a fantastic upper-body workout, but they’re missing the point. Me and this iron – we *are* *one* body. 
+              <br/><br/>
+              Anyway, look. I was once a young boy with crinkled shirts. Irons were unfamiliar materials to me. But now they’re not. I’m telling you this because it can be your story, too. You can do this. Whatever your unfamiliar material is -- it can become a part of you.</p>
+          </div> 
+          </div>  
+          <p class="credit">Commissioned from: <a href="https://www.fiverr.com/saavfabb/say-anything-you-want-in-a-video-while-ironing" target="_blank">I will say Anything You Want While Ironing In A HD Video, In Italian, English, Spanish</a></p>
+      </div>
     </div><!--end row-->
+  <div class="fat-bottom"></div>
+<!--START: FOOTER -->
+<footer>
+  <div>
+    <div class="col-xs-12">
+      <p class="center"><span class="copyright">&copy; 2015<script>new Date().getFullYear()>2015&&document.write("-"+new Date().getFullYear());</script> Anxious to Make</span> <img class="tiny" src="img/anxious-icon.gif"/> <!-- <a href="https://twitter.com/anxioustomake" target="_blank"> <i class="fa fa-twitter"></i></a> --></p>
+    </div>
+  </div>
+</footer>
+<!--SEND: FOOTER -->  
+  </div><!--end container-->
 <!--END: MAIN CONTENT-->
 
 <!-- Javascript -->
